# wxforge

./: .gitignore  Cargo.toml  README.md
crates/wx-calc/: Cargo.toml
crates/wx-calc/src/: calc_inventory.txt  inventory.rs  lib.rs  parity_tail.rs  ported_names.txt
crates/wx-cli/: Cargo.toml
crates/wx-cli/src/: feature_materialize.rs  main.rs
crates/wx-export/: Cargo.toml
crates/wx-export/src/: lib.rs
crates/wx-fetch/: Cargo.toml
crates/wx-fetch/src/: lib.rs
crates/wx-grib/: Cargo.toml
crates/wx-grib/src/: lib.rs
crates/wx-radar/: Cargo.toml
crates/wx-radar/src/: lib.rs
crates/wx-render/: Cargo.toml
crates/wx-render/src/: lib.rs
crates/wx-train/: Cargo.toml
crates/wx-train/src/: lib.rs
crates/wx-types/: Cargo.toml
crates/wx-types/src/: lib.rs
docs/: AGENT_JOBS.md  ARCHITECTURE.md  CALC_PARITY.md  METPY_REGRESSION.md  MIGRATION_PLAN.md  MODEL_COVERAGE.md  REFERENCE_MATRIX.md
examples/: agent_job_classical.json  agent_job_init_smoke.json  agent_job_swin.json  benchmark_report.json  benchmark_suite.py  compare_field_decode.py  compare_gfs_with_metpy.py  compare_metrust_with_metpy.py  compare_severe_profiles_with_metpy.py  compare_thermo_profiles_with_metpy.py  make_agent_job_sample.ps1  make_sample_grib2.ps1  metpy_regression_report.json  metpy_regression_suite.py  ml_pipeline_verify_report.json  sample.pal  sample_dataset_manifest.json  sample_dataset_manifest_jsonl.json  sample_dataset_manifest_parquet.json  verification_suite.py  verification_suite_report.json  verify_ml_pipeline.py
examples/agent_classical_build/: dataset_build_manifest.json  dataset_manifest.json  dataset_request.json  job_plan.json
examples/agent_classical_build/sample_0001/: dataset_manifest.json  sample_manifest.json
examples/agent_classical_build/shards/: shard-00000.json  shard-00001.json  shard-00002.json  shard-00003.json  shard-00004.json  shard-00005.json  shard-00006.json  shard-00007.json
examples/agent_classical_build_live/: dataset_build_manifest.json  dataset_manifest.json  dataset_request.json  job_plan.json  model_recipe.json
examples/agent_classical_build_live/gulf_severe_0001/: dataset_manifest.json  sample_manifest.json
examples/agent_classical_build_live/shards/: shard-00000.json
examples/agent_classical_build_live/synthetic_severe_0001/: dataset_manifest.json  sample_manifest.json
examples/benchmark_batch_dataset/: dataset_build_manifest.json  dataset_manifest.json
examples/benchmark_batch_dataset/era5_surface/: dataset_manifest.json  sample_manifest.json
examples/benchmark_batch_dataset/sample_main/: dataset_manifest.json  sample_manifest.json
examples/benchmark_batch_dataset/shards/: shard-00000.json  shard-00000.tar  shard-00001.json  shard-00001.tar
examples/benchmark_gfs_maps/: manifest.json
examples/benchmark_sample_bundle/: dataset_manifest.json  sample_manifest.json
examples/ecmwf_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/ecmwf_decode_verify/: comparison_summary.json  manifest.json
examples/ecmwf_metpy_verify/: comparison_summary.json  manifest.json
examples/era5_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/era5_decode_verify/: comparison_summary.json  manifest.json
examples/era5_metpy_verify/: comparison_summary.json  manifest.json
examples/era5_t850_bundle/: dataset_manifest.json  sample_manifest.json
examples/gfs_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/gfs_metpy_verify/: comparison_summary.json
examples/gfs_metpy_verify_f006/: comparison_summary.json  manifest.json
examples/gfs_metpy_verify_f012/: comparison_summary.json  manifest.json
examples/gfs_metrust_verify/: comparison_summary.json
examples/hrrr_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/hrrr_decode_verify/: comparison_summary.json  manifest.json
examples/ml_pipeline_verify/: agent_job_init.json
examples/ml_pipeline_verify/agent_job_build/: dataset_build_manifest.json  dataset_manifest.json
examples/ml_pipeline_verify/batch_dataset/: dataset_build_manifest.json  dataset_manifest.json
examples/ml_pipeline_verify/batch_jsonl_dataset/: dataset_build_manifest.json  dataset_manifest.json
examples/ml_pipeline_verify/batch_parquet_dataset/: dataset_build_manifest.json  dataset_manifest.json
examples/ml_pipeline_verify/era5_bundle/: dataset_manifest.json  sample_manifest.json
examples/nam_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/nam_decode_verify/: comparison_summary.json  manifest.json
examples/nam_metpy_verify/: comparison_summary.json  manifest.json
examples/rap_2t_bundle/: dataset_manifest.json  sample_manifest.json
examples/rap_decode_verify/: comparison_summary.json  manifest.json
examples/sample_bundle/: dataset_manifest.json  sample_manifest.json
examples/thermo_profile_verify/: comparison_summary.json  wxforge_thermo_cases.json
examples/training/: train_classifier.py  train_diffusion.py  train_swin.py  train_unet.py
python/: pyproject.toml  test_dataset.py
python/wxforge_data/: __init__.py  dataset.py
python/wxtrain_data/: __init__.py  dataset.py
(+37 files in other folders)
