[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wxforge-data"
version = "0.1.0"
description = "PyTorch dataset loaders for wxforge training data"
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]
