[package]
name = "wx-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source planning and byte fetch interfaces for wxforge"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
