[package]
name = "wx-grib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GRIB inventory and decode interfaces for wxforge"

[dependencies]
dicom-toolkit-jpeg2000 = { version = "0.4.0", default-features = false, features = ["std"] }
rust-aec = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wx-types = { path = "../wx-types" }

[lib]
path = "src/lib.rs"
