[package]
name = "wx-train"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Training dataset planning for wxforge"

[dependencies]
serde = { version = "1", features = ["derive"] }
wx-export = { path = "../wx-export" }
wx-types = { path = "../wx-types" }

[lib]
path = "src/lib.rs"
